Version 8.15 (Unreleased)
-------------------------

- Refactor usage of ``sentry.app`` to use individual modules.

API Changes
~~~~~~~~~~~

- Added CommitFileChangeEndpoint
- Added IssuesResolvedInReleaseEndpoint


Version 8.14
------------

- Added new internal processing interface that supports multiple processing steps per stacktrace (for instance JavaScript + native)
- Add IE10 legacy browser filter
- Added data migration to merge legacy releases
- Added support for symbolizing inlined frames and added heuristics for fixing up native stacktraces.
- Removed instruction_offset as a frame attribute from stacktraces
- [BREAKING] Quotas must now instantiate RateLimited and NotRateLimited return values.
- [BREAKING] Redis quota implementations now return BasicRedisQuota instead of tuples.
- Commits using the ``Fixes SHORTID`` annotation will now be tracked appropriately.
- Release functionality is now detected at a project level to enable various features.
- Added basic encryption facilities (``sentry.utils.encryption``).
- Added support for "Fixes XXX, YYY" and "Fixes XXX YYY" notations.
- Added bulk "Resolve in Next Release" to stream actions.
- Various visual improvements to notifications, including the addition of
  transactions.
- Plugins can now add tasks that run in sentry as celery workers.
- Added the ability to verify TLS connections when fetching artifacts.
- Added data migration to merge environments across an organization
- Added ``timesSeen`` keyword to issue search.

API Changes
~~~~~~~~~~~

- Added OrganizationReleasesEndpoint.
- Added context type ``app`` for cocoa events.
- Added ``assignedTo`` param to ``/projects/{org}/{project}/issues/``.
- Split out filtered stats onto Inbound Data Filters page
- Added OrganizationReleasesEndpoint
- Added OrganizationReleaseFileEndpoint

Schema Changes
~~~~~~~~~~~~~~

- Added unique index on ``Release(organization_id, version)``
- Removed unique index on ``Release(project_id, version)``